Bug 461113 - Recent list file can not update if it's full
Summary: Recent list file can not update if it's full
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: generic (other bugs)
Version First Reported In: 0.9.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: george fb
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-28 12:53 UTC by Ivan
Modified: 2022-10-28 13:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ivan 2022-10-28 12:53:03 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Use haruna 0.9.3
2. Make some entries in recent files
3. Try to 'clear the list'
4.It's cleared but if you close and open haruna again, the previous entries are still there

OBSERVED RESULT
Recent files list doesn't update if it's full

EXPECTED RESULT
Recent files list updates normally and have recently played files there

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux
(available in About System)
KDE Plasma Version: 5.26.2
KDE Frameworks Version:  5.99.0-1
Qt Version: 5.15.6

ADDITIONAL INFORMATION
Open last file and video position is working, I downgraded to 0.9.0 version of Haruna and recent files worked properly
Comment 1 george fb 2022-10-28 13:27:39 UTC
Git commit 9435f517e41bf67b6ff35133d19f96488c883fdf by George Florea Bănuș.
Committed on 28/10/2022 at 13:27.
Pushed by georgefb into branch 'master'.

recentfilesmodel: fix clearing and adding when list is full

delete entries from config file when clearing list
remove last entry when adding a new one

M  +14   -1    src/models/recentfilesmodel.cpp
M  +1    -0    src/models/recentfilesmodel.h
M  +1    -1    src/qml/Menus/FileMenu.qml

https://invent.kde.org/multimedia/haruna/commit/9435f517e41bf67b6ff35133d19f96488c883fdf