recentfilesmodel: fix clearing and adding when list is full

delete entries from config file when clearing list
remove last entry when adding a new one

BUG: 461113